--- a/api/app/config/parameters.yml.dist
+++ b/api/app/config/parameters.yml.dist
@@ -17,3 +17,8 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    jwt_private_key_path: '%kernel.root_dir%/../var/jwt/private.pem'
+    jwt_public_key_path:  '%kernel.root_dir%/../var/jwt/public.pem'
+    jwt_key_pass_phrase:  'warsztat' # hasło wpisane podczas tworzenia kluczy
+    jwt_token_ttl:  3600
