--- a/api/app/config/parameters.yml.dist
+++ b/api/app/config/parameters.yml.dist
@@ -22,3 +22,10 @@ parameters:
     jwt_public_key_path:  '%kernel.root_dir%/../var/jwt/public.pem'
     jwt_key_pass_phrase:  'warsztat' # hasło wpisane podczas tworzenia kluczy
     jwt_token_ttl:  3600
+
+    # nelmio cors
+    cors_allow_origin: 'http://localhost'
+
+    # nelmio api docs
+    api_name: 'Your API name'
+    api_description: 'The full description of your API'
