--- a/api/composer.json
+++ b/api/composer.json
@@ -29,7 +29,13 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "twig/twig": "^1.0||^2.0",
-        "lexik/jwt-authentication-bundle": "^2.1"
+        "lexik/jwt-authentication-bundle": "^2.1",
+
+        "nelmio/cors-bundle": "^1.4",
+        "nelmio/api-doc-bundle": "^2.11",
+        "friendsofsymfony/rest-bundle": "^1.7",
+        "jms/serializer-bundle": "^1.1",
+        "willdurand/faker-bundle": "^1.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
