--- a/api/app/config/routing_api.yml
+++ b/api/app/config/routing_api.yml
@@ -14,6 +14,18 @@ store:
     type: rest
     resource: ApiBundle\Controller\StoreController
 
+service:
+    type: rest
+    resource: ApiBundle\Controller\ServiceController
+
 consumer:
     type: rest
     resource: ApiBundle\Controller\ConsumerController
+
+employee:
+    type: rest
+    resource: ApiBundle\Controller\EmployeeController
+
+user:
+    type: rest
+    resource: ApiBundle\Controller\UserController
