Document positions controller

--- a/api/app/config/routing_api.yml
+++ b/api/app/config/routing_api.yml
@@ -2,6 +2,10 @@ document:
     type: rest
     resource: ApiBundle\Controller\DocumentController
 
+document_position:
+    type: rest
+    resource: ApiBundle\Controller\DocumentPositionController
+
 vehicle:
     type: rest
     resource: ApiBundle\Controller\VehicleController
