--- a/api/app/config/security.yml
+++ b/api/app/config/security.yml
@@ -26,17 +26,17 @@ security:
     firewalls:
 
         login:
-            pattern:  ^/api/login
+            pattern:  ^/login
             stateless: true
             anonymous: true
             form_login:
-                check_path:               /api/login_check
+                check_path:               /login_check
                 success_handler:          lexik_jwt_authentication.handler.authentication_success
                 failure_handler:          lexik_jwt_authentication.handler.authentication_failure
                 require_previous_session: false
 
         api:
-            pattern:   ^/api
+            pattern:   ^/
             stateless: true
             guard:
                 authenticators:
@@ -48,5 +48,5 @@ security:
             switch_user:  true
 
     access_control:
-        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
