--- a/application/package.json
+++ b/application/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "ap-angular2-fullcalendar": "^1.2.8",
     "core-js": "^2.4.1",
     "ng-semantic": "^1.1.13",
     "ng2-breadcrumb": "^0.5.8",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.7.2",
+    "angular-calendar": "^0.15.0"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.3.1",
