--- a/api/app/config/security.yml
+++ b/api/app/config/security.yml
@@ -26,8 +26,10 @@ security:
     firewalls:
 
         dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
+            pattern: ^/(_profiler|_wdt|css|images|js)/
             security: false
+            stateless: true
+            anonymous: true
 
         login:
             pattern:  ^/login
@@ -38,6 +40,21 @@ security:
                 success_handler:          lexik_jwt_authentication.handler.authentication_success
                 failure_handler:          lexik_jwt_authentication.handler.authentication_failure
                 require_previous_session: false
+
+        registration:
+            pattern:  ^/registration
+            stateless: true
+            anonymous: true
+
+        profiler:
+            pattern:  ^/_profiler
+            stateless: true
+            anonymous: true
+
+        check_username:
+            pattern:  ^/username_check
+            stateless: true
+            anonymous: true
 
         api:
             pattern:   ^/
@@ -53,5 +70,7 @@ security:
 
     access_control:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/registration, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/username_check, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/(_wdt|_profiler), roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
